--- a/uapl_runnable/uapl_runnable.csproj
+++ b/uapl_runnable/uapl_runnable.csproj
@@ -50,6 +50,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\console\console.csproj">
+      <Project>{bd2fc23f-1710-42c3-aa53-cd425ace542e}</Project>
+      <Name>console</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\logic\logic.csproj">
+      <Project>{6a81b1f6-b59e-437f-8571-3ca6edcf61ae}</Project>
+      <Name>logic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\sys\sys.csproj">
       <Project>{cadafc2c-8c31-42d3-a58f-e4cfc02c832b}</Project>
       <Name>sys</Name>
