--- a/help/help.csproj
+++ b/help/help.csproj
@@ -4,13 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6A81B1F6-B59E-437F-8571-3CA6EDCF61AE}</ProjectGuid>
+    <ProjectGuid>{726017F5-5CF8-4A57-90D9-617125860CC3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>logic</RootNamespace>
-    <AssemblyName>logic</AssemblyName>
+    <RootNamespace>help</RootNamespace>
+    <AssemblyName>help</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
